change to jdk8